secondfile/objects/Newsroom_Share__c.object
<CustomObject>
    <description>This object is used to store the counting of the Share.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technical Resourcs for Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Newsroom Shares</relationshipLabel>
        <relationshipName>Newsroom_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_Id__c</fullName>
        <label>Article Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Version_Number__c</fullName>
        <label>Article Version Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chatter_Count__c</fullName>
        <label>Chatter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>Feedback is feild for technical resources</description>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Plus__c</fullName>
        <label>Google Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_Article__c</fullName>
        <label>Link to Article</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Count__c</fullName>
        <label>LinkedIn Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>News_Id__c</fullName>
        <label>News Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF (Thumbs_Up_Rating__c, &quot;Thumbs Up&quot;, IF (Thumbs_Down_Rating__c, &quot;Thumbs Down&quot;, &quot;Not Rated&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbs_Down_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Thumbs down rating for technical resources</description>
        <label>Thumbs Down Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thumbs_Up_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Thumbs Up Rating feilds Tecnical resources</description>
        <label>Thumbs Up Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <formula>Twitter_Count__c  +  LinkedIn_Count__c  +  Email__c  +  Google_Plus__c + Chatter_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter_Count__c</fullName>
        <label>Twitter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Newsroom Shares</relationshipLabel>
        <relationshipName>Newsroom_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Newsroom Share</label>
    <listViews>
        <fullName>All_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Article_Title__c</columns>
        <columns>Article_Version_Number__c</columns>
        <columns>User__c</columns>
        <columns>Thumbs_Up_Rating__c</columns>
        <columns>Thumbs_Down_Rating__c</columns>
        <columns>Link_to_Article__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Newsroom_Share__c.Feedback</value>
        </filters>
        <label>All Feedback</label>
    </listViews>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>Newsroom Share Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Newsroom Shares</pluralLabel>
    <recordTypes>
        <fullName>Feedback</fullName>
        <active>true</active>
        <description>TechnicalResources Record type in NewsRoomShare object</description>
        <label>Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sharing</fullName>
        <active>true</active>
        <description>NewsRoom Record type</description>
        <label>Sharing</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>